# gardener

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy-lints.toml  gardener.toml  package.json
tools/gardener/: Cargo.toml
tools/gardener/migrations/: 0001_backlog.sql  0002_backlog.sql  0003_backlog.sql
tools/gardener/mockups/: live-queue-mock.html  live-queue-terminal-requirements.md  tui-backlog.md
tools/gardener/src/: backlog_snapshot.rs  backlog_store.rs  clippy_lints.rs  config.rs  errors.rs  fsm.rs  gh.rs  git.rs  hotkeys.rs  learning_loop.rs  lib.rs  log_retention.rs  logging.rs  main.rs  output_envelope.rs  postmerge_analysis.rs  postmortem.rs  pr_audit.rs  priority.rs  prompt_context.rs  prompt_knowledge.rs  prompt_registry.rs  prompts.rs  protocol.rs  quality_domain_catalog.rs  quality_evidence.rs  quality_grades.rs  quality_scoring.rs  repo_intelligence.rs  scheduler.rs  seed_runner.rs  seeding.rs  startup.rs  task_identity.rs  triage.rs  triage_agent_detection.rs  triage_discovery.rs  triage_interview.rs  tui.rs  types.rs  (+5 more)
tools/gardener/tests/: cli_smoke.rs  clippy_expect_used.rs  clippy_identity_op.rs  hotkey_lint.rs  hotkey_pty_e2e.rs  instrumentation_lint.rs  phase02b_triage.rs  phase03_startup.rs  phase04_scheduler.rs  phase05_agent_adapters.rs  phase06_tui_rendering.rs  phase07_hotkeys.rs  phase08_triage_integration.rs  phase09_adapter_edge_cases.rs  phase09_gitting_recovery_contract.rs  phase10_gitting_recovery_integration.rs  phase10_triage_error_paths.rs  phase11_hotkey_edge_cases.rs  phase12_render_edge_cases.rs  phase1_contracts.rs  (+4 more)
(+85 files in other folders)
