[workspace]
members = ["tools/gardener"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
identity_op = "deny"
manual_memcpy = "warn"
manual_clamp = "warn"
manual_range_contains = "warn"
manual_filter = "warn"
manual_flatten = "warn"
manual_map = "warn"
manual_non_exhaustive = "warn"
manual_retain = "warn"
