[package]
name = "gardener"
version = "0.1.0"
edition = "2021"

[lib]
name = "gardener"
path = "src/lib.rs"

[[bin]]
name = "gardener"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.44", features = ["sync"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
